force-app/main/default/objects/Pathology__c/Pathology__c.object-meta.xml
<CustomObject>
    <label>Pathology</label>
    <nameField>
        <label>Pathology</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pathology</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>