force-app/main/default/objects/Pathology__c/fields/Bill_Id__c.field-meta.xml
<CustomField>
    <fullName>Bill_Id__c</fullName>
    <label>Bill Id</label>
    <type>AutoNumber</type>
</CustomField>