force-app/main/default/objects/Pathology__c/fields/Cost_of_Test_1__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Test_1__c</fullName>
    <label>Cost of Test 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>