force-app/main/default/objects/Pathology__c/fields/Test_1__c.field-meta.xml
<CustomField>
    <fullName>Test_1__c</fullName>
    <label>Test 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>