force-app/main/default/objects/Pathology__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bill_Id__c</columns>
    <columns>Patient_Name__c</columns>
    <columns>Test_1__c</columns>
    <columns>Doctor_Name__c</columns>
    <columns>Test_2__c</columns>
    <columns>Cost_of_Test_1__c</columns>
    <columns>Cost_of_Test_2__c</columns>
    <columns>Paid_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>